Minor readme fix

--- a/README.adoc
+++ b/README.adoc
@@ -10,7 +10,7 @@ Marat Radchenko <marat@slonopotamus.org>
 image:https://img.shields.io/gem/v/{project-handle}.svg[Latest Release,link={uri-gem}]
 image:{uri-project}/workflows/CI/badge.svg?branch=master[Build Status,link={uri-ci}]
 
-{project-handle} is a Mobi parser/generator library written in Ruby.
+{project-name} is a Mobi parser/generator library written in Ruby.
 
 == Installation
 
